@@ -3,6 +3,7 @@ Release ...
   vi usually does not return to ex mode with "screen too large" when the
   terminal is resized on a large monitor anymore.
 * ex (not vi) can now edit files with lines of arbitrary length.
+* Viewing executables and compressed files is no longer inhibited.
 
 Release 3/25/05
 * vi no longer dies with a segmentation fault if a line does not fit on the
